adding images for every site and adding content

--- a/Hardware und PC-Komponenten/cpu.html
+++ b/Hardware und PC-Komponenten/cpu.html
@@ -11,10 +11,9 @@
 
 <body class="bg-light">
 
-<!-- Navigation (DIESELBE wie auf deiner Startseite!) -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
-        <ul class="nav">
+        <ul class="nav ms-auto">
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white">Home</a>
             </li>
@@ -42,7 +41,6 @@
     </div>
 </nav>
 
-<!-- Header -->
 <div class="bg-dark text-white py-5">
     <div class="container">
         <h1 class="display-4 fw-bold">CPU – Der Prozessor</h1>
@@ -50,21 +48,97 @@
     </div>
 </div>
 
-<!-- Inhalt -->
-<div class="container mt-5">
-    <div class="col-md-12">
-            <div class="component-box">
-                <img src="img.jpg" class="component-img" alt="CPU">
-                <h3>CPU</h3>
-                <p>
-                    Die CPU ist die Zentraleinheit Ihres Computers. Sie übernimmt die Steuerung der Datenverarbeitung,
-                    ähnlich wie das Gehirn den Körper lenkt. Die Verarbeitungsgeschwindigkeit wird als „Taktfrequenz“
-                    bezeichnet und in Gigahertz (GHz) gemessen. Eine CPU mit einem hohen GHz-Wert wird wahrscheinlich
-                    schneller arbeiten als andere Versionen der gleichen Marke und Generation.
-                </p>
-            </div>
-        </div>
+<div class="container my-5 section-box">
+<div class="row align-items-start">
+
+
+<div class="col-md-6">
+
+    <!-- Was ist eine CPU -->
+    <h2 class="fw-bold mb-3 border-bottom pb-2">
+        <i class="bi bi-cpu"></i> Was ist eine CPU?
+    </h2>
+
+    <p>
+        Wenn Sie jemals Ihren Computer geöffnet und ins Innere geschaut haben, ist Ihnen vielleicht der große
+        „Chip“ auf der Hauptplatine aufgefallen. Dieser Chip ist die Central Processing Unit (CPU), das Gehirn
+        Ihres Computers, das für die Ausführung aller Anweisungen verantwortlich ist, die Ihren Computer zum
+        Laufen bringen.
+    </p>
+    <p>
+        Eine CPU (Central Processing Unit) ist die Hauptkomponente eines jeden Computers oder elektronischen
+        Geräts. Sie ist für die Ausführung der vom Benutzer erteilten Anweisungen verantwortlich. Die CPU
+        fungiert als das „Gehirn“ des Computers – sie liest und interpretiert Befehle von Softwareprogrammen
+        und steuert damit andere Komponenten des Geräts.
+    </p>
 </div>
+
+<div class="col-md-6 p-0">
+    <img src="img2.png" class="img-fluid" style="transform: scale(1.1);" alt="CPU Bild">
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+    <!-- Rolle der CPU -->
+    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Die Rolle der CPU</h3>
+    <p>
+        Die CPU ist für die Ausführung von Anweisungen und die Verarbeitung von Daten verantwortlich, um die
+        von Programmen oder Anwendungen zugewiesenen Aufgaben zu erfüllen. Dazu muss sie Daten aus dem
+        Speicher abrufen, dekodieren und anschließend ausführen.
+        Dieser Prozess läuft extrem schnell ab – moderne CPUs können Millionen von Befehlen pro Sekunde
+        ausführen. Viele CPUs besitzen mehrere Kerne, sodass sie mehrere Aufgaben gleichzeitig bearbeiten
+        können.
+    </p>
+
+    <!-- Funktionsweise -->
+    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert die CPU?</h3>
+    <p>
+        Eine CPU arbeitet in zwei Hauptphasen: dem Fetch-Execute-Zyklus und dem Decode-Execute-Zyklus.
+        Im Fetch-Execute-Zyklus holt der Prozessor einen Befehl aus dem Speicher, dekodiert ihn und führt ihn
+        aus. Danach geht er zum nächsten Befehl über.
+        Beim Decode-Execute-Zyklus wird ein Befehl zunächst dekodiert, bevor er ausgeführt wird. Jeder Befehl
+        muss mindestens einmal dekodiert werden, bevor er mehrfach ausgeführt werden kann.
+    </p>
+
+    <!-- CPU Geschwindigkeit -->
+    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">CPU-Geschwindigkeit</h3>
+    <p>
+        Die Geschwindigkeit einer CPU wird in Hertz (Hz) gemessen. Je höher die Taktfrequenz, desto schneller
+        kann die CPU Anweisungen verarbeiten. Moderne Prozessoren arbeiten typischerweise zwischen 1 GHz und
+        5 GHz.
+    </p>
+
+    <!-- CPU Kerne -->
+    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">CPU-Kerne</h3>
+    <p>
+        Neben der Taktfrequenz besitzen CPUs mehrere Kerne. Jeder Kern kann eigene Befehle gleichzeitig
+        ausführen. Dadurch können moderne Prozessoren mehrere Aufgaben parallel bearbeiten.
+        Je nach Einsatzgebiet verfügen CPUs über zwei bis acht Kerne – High-End-Modelle sogar über deutlich
+        mehr.
+    </p>
+
+    <!-- CPU Leistung -->
+    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Was ist CPU-Leistung?</h3>
+    <p>
+        Die CPU-Leistung beschreibt, wie schnell eine CPU Anweisungen verarbeiten kann. Sie wird in
+        Anweisungen pro Sekunde (IPS) gemessen. Je höher die IPS, desto schneller arbeitet das System.
+        Die Leistung hängt von Taktfrequenz, Architektur und Cache-Größe ab.
+        Eine leistungsstarke CPU sorgt für schnellere Ladezeiten, flüssigeres Multitasking und bessere
+        Performance in Spielen und Anwendungen. Außerdem bleibt das System länger zukunftssicher und kann
+        moderne Software-Updates problemlos verarbeiten.
+    </p>
+
+<br>
+<br>
+<br>
+
 
 </body>
 </html>
