--- a/Hardware und PC-Komponenten/psu.html
+++ b/Hardware und PC-Komponenten/psu.html
@@ -14,7 +14,7 @@
 <!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
-        <ul class="nav">
+        <ul class="nav ms-auto">
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white">Home</a>
             </li>
@@ -46,23 +46,81 @@
 <div class="bg-dark text-white py-5">
     <div class="container">
         <h1 class="display-4 fw-bold">Netzteil – PSU</h1>
-        <p class="lead">Versorgt alle Komponenten mit Energie</p>
+        <p class="lead">Die Stromquelle des Computers</p>
     </div>
 </div>
 
 <!-- Inhalt -->
-<div class="container mt-5">
-    <div class="p-5 bg-white rounded shadow-lg fade-in">
-        <div class="col-md-12">
-            <div class="component-box">
-                <img src="img (3).jpg" class="component-img" alt="PSU">
-                <h3>PSU</h3>
-                <p>
-                    Ein Netzteil leitet den Strom aus einer externen Stromquelle oder Laptop-Batterie zum Motherboard, um die einzelnen Hardwarekomponenten mit Elektrizität zu versorgen. Netzteile müssen daher unbedingt eine ausreichende Wattleistung haben.
-                </p>
-            </div>
-        </div>
-    </div>
+<div class="container my-5 section-box">
+<div class="row align-items-start">
+
+<!-- Text links -->
+<div class="col-md-6">
+
+    <h2 class="fw-bold mb-3 border-bottom pb-2">
+        <i class="bi bi-plug"></i> Was ist ein Netzteil?
+    </h2>
+
+    <p>
+        Das Netzteil (PSU – Power Supply Unit) versorgt alle Komponenten des Computers mit Strom. Es wandelt
+        die 230‑Volt‑Wechselspannung aus der Steckdose in verschiedene Gleichspannungen um, die CPU, GPU,
+        Mainboard, Speicher und Lüfter benötigen.
+        <br>
+        Ein gutes Netzteil sorgt für stabile Spannungen, schützt vor Überspannung und liefert genügend Leistung
+        für alle Komponenten – besonders wichtig bei starken Grafikkarten.
+    </p>
+
+</div>
+
+<!-- Bild rechts -->
+<div class="col-md-6 p-0">
+    <img src="img5.png" class="img-fluid" style="max-width: 85%; margin-top: 30px; margin-left: 20px;" alt="Netzteil Bild">
+</div>
+
+</div>
+
+<!-- Weitere Abschnitte -->
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Die Rolle des Netzteils</h3>
+<p>
+    Das Netzteil ist für die Stromversorgung des gesamten Systems verantwortlich. Es verteilt Energie an CPU,
+    GPU, Mainboard, Laufwerke und Lüfter. Ohne ein zuverlässiges Netzteil kann kein Computer stabil laufen.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert ein Netzteil?</h3>
+<p>
+    Ein Netzteil wandelt Wechselstrom (AC) in Gleichstrom (DC) um. Es besitzt mehrere Leitungen mit
+    unterschiedlichen Spannungen wie 12V, 5V und 3.3V. Moderne Netzteile haben Schutzmechanismen wie
+    Überstromschutz, Überspannungsschutz und Kurzschlussschutz.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wichtige PSU‑Eigenschaften</h3>
+<p>
+    Beim Kauf eines Netzteils sind folgende Punkte entscheidend:
+</p>
+
+<ul>
+    <li><strong>Wattzahl:</strong> Wie viel Leistung das Netzteil liefern kann.</li>
+    <li><strong>Effizienz:</strong> 80‑Plus‑Zertifizierungen wie Bronze, Gold oder Platinum.</li>
+    <li><strong>Kabelmanagement:</strong> Modular, semi‑modular oder non‑modular.</li>
+    <li><strong>Schutzschaltungen:</strong> OVP, OCP, SCP, UVP usw.</li>
+</ul>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Warum ist ein gutes Netzteil wichtig?</h3>
+<p>
+    Ein hochwertiges Netzteil sorgt für:
+</p>
+
+<ul>
+    <li>Stabile Spannungen</li>
+    <li>Längere Lebensdauer der Komponenten</li>
+    <li>Weniger Abstürze und Fehler</li>
+    <li>Leisen Betrieb</li>
+    <li>Mehr Sicherheit</li>
+</ul>
+
+<br><br><br>
+
 </div>
 
 </body>
