--- a/Hardware und PC-Komponenten/ram.html
+++ b/Hardware und PC-Komponenten/ram.html
@@ -14,7 +14,7 @@
 <!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
-        <ul class="nav">
+        <ul class="nav ms-auto">
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white">Home</a>
             </li>
@@ -46,24 +46,78 @@
 <div class="bg-dark text-white py-5">
     <div class="container">
         <h1 class="display-4 fw-bold">RAM – Arbeitsspeicher</h1>
-        <p class="lead">Schneller Speicher für laufende Programme</p>
+        <p class="lead">Der schnelle Zwischenspeicher des Computers</p>
     </div>
 </div>
 
 <!-- Inhalt -->
-<div class="container mt-5">
-    <div class="p-5 bg-white rounded shadow-lg fade-in">
-                <div class="col-md-12">
-            <div class="component-box">
-                <img src="crucial-ddr3-4gb-dimm-image.avif" class="component-img" alt="RAM">
-                <h3>RAM</h3>
-                <p>
-                    Ein Computer-RAM arbeitet eng mit der CPU zusammen und speichert vorübergehend von Programmen erstellte Informationen, um sie sofort zugänglich zu machen. Es wird manchmal auch als „flüchtiger“ Speicher bezeichnet, da die vorhandenen Daten jedes Mal gelöscht werden, wenn Ihr Computer neu gestartet wird.
-                    Das RAM spielt bei vielen Aufgaben eine entscheidende Rolle: bei der Bildwiedergabe im Grafikdesign, bei der Bearbeitung von Videos oder Fotos sowie beim Multitaskings mit mehreren geöffneten Apps oder Programmen.  
-                </p>
-            </div>
-        </div>
-    </div>
+<div class="container my-5 section-box">
+<div class="row align-items-start">
+
+<!-- Text links -->
+<div class="col-md-6">
+
+    <h2 class="fw-bold mb-3 border-bottom pb-2">
+        <i class="bi bi-memory"></i> Was ist RAM?
+    </h2>
+
+    <p>
+        RAM (Random Access Memory) ist der Arbeitsspeicher eines Computers. Er speichert Daten, auf die das
+        System schnell zugreifen muss, während Programme ausgeführt werden. Im Gegensatz zu einer SSD oder HDD
+        ist RAM extrem schnell, verliert seine Daten jedoch, sobald der Computer ausgeschaltet wird.
+        Je mehr RAM ein Computer besitzt, desto mehr Programme und Prozesse können gleichzeitig ausgeführt
+        werden, ohne dass das System langsamer wird. RAM ist daher entscheidend für Multitasking und
+        Systemleistung.
+    </p>
+
+</div>
+
+<!-- Bild rechts -->
+<div class="col-md-6 p-0">
+    <img src="crucial-ddr3-4gb-dimm-image.avif" class="img-fluid" style="margin-top: 40px; margin-left: 20px;" style="transform: scale(0.9);" alt="RAM Bild">
+</div>
+
+</div>
+
+<!-- Weitere Abschnitte -->
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Die Rolle des RAM</h3>
+<p>
+    RAM dient als schneller Zwischenspeicher zwischen CPU und Massenspeicher. Wenn Programme gestartet werden,
+    lädt das System wichtige Daten in den Arbeitsspeicher, damit die CPU schnell darauf zugreifen kann.
+    Dadurch werden Ladezeiten verkürzt und Programme laufen flüssiger.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert RAM?</h3>
+<p>
+    RAM speichert Daten in kleinen Speicherzellen, die extrem schnell gelesen und beschrieben werden können.
+    Diese Zellen benötigen jedoch eine konstante Stromversorgung. Sobald der Computer ausgeschaltet wird,
+    gehen die gespeicherten Informationen verloren – deshalb nennt man RAM „flüchtigen Speicher“.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">RAM-Geschwindigkeit</h3>
+<p>
+    Die Geschwindigkeit von RAM wird in Megahertz (MHz) oder Gigahertz (GHz) angegeben. Je höher die
+    Geschwindigkeit, desto schneller können Daten übertragen werden. Moderne DDR4- und DDR5-Module erreichen
+    Geschwindigkeiten von 2400 MHz bis über 6000 MHz.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">RAM-Kapazität</h3>
+<p>
+    Die Kapazität bestimmt, wie viele Daten gleichzeitig im Arbeitsspeicher gehalten werden können. Für
+    alltägliche Aufgaben reichen 8 GB aus, während moderne Spiele und professionelle Anwendungen oft 16 GB
+    oder mehr benötigen. High-End-Systeme verwenden 32 GB oder sogar 64 GB RAM.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Warum ist RAM wichtig?</h3>
+<p>
+    Ohne ausreichend RAM wird ein Computer langsam, Programme reagieren verzögert und Multitasking wird
+    schwierig. Mehr RAM sorgt für flüssigeres Arbeiten, schnellere Ladezeiten und bessere Performance in
+    Spielen und Anwendungen.
+</p>
+
+<br><br><br>
+
 </div>
 
 </body>
