--- a/Hardware und PC-Komponenten/ssd.html
+++ b/Hardware und PC-Komponenten/ssd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SSD & HDD – Speicherlösungen</title>
+    <title>SSD / HDD – Speicherlösungen</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
 <!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
-        <ul class="nav">
+        <ul class="nav ms-auto">
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-white">Home</a>
             </li>
@@ -45,22 +45,74 @@
 <!-- Header -->
 <div class="bg-dark text-white py-5">
     <div class="container">
-        <h1 class="display-4 fw-bold">SSD & HDD – Speicherlösungen</h1>
-        <p class="lead">Speicher für Betriebssystem, Programme und Daten</p>
+        <h1 class="display-4 fw-bold">SSD / HDD – Speicherlösungen</h1>
+        <p class="lead">Der Platz für deine Daten</p>
     </div>
 </div>
 
 <!-- Inhalt -->
-<div class="container mt-5">
-   <div class="col-md-12">
-            <div class="component-box">
-                <img src="img.png" class="component-img" alt="SSD und HDD">
-                <h3>SSD und HDD</h3>
-                <p>
-                    SSDs und HDDs sind zwei Arten von Speicherlaufwerken, mit deren Hilfe sich auf Ihrem Computer installierte Programme, Anwendungen oder Dateien speichern lassen, selbst wenn dieser ausgeschaltet ist. HDDs nutzen eine ältere Technologie, bei der Binärdaten auf rotierende Magnetscheiben, sogenannte Platten, geschrieben werden, die sich mit hoher Geschwindigkeit drehen. SSDs sind eine neuere Art von Laufwerken, die Daten auf statischen NAND-Flash-Speicher-Chips speichern. Im direkten Vergleich zwischen SSD und Festplatte liegen SSDs klar vorne, hauptsächlich dank ihrer Geschwindigkeit, ihrer Haltbarkeit und ihres Stromverbrauchs.
-                </p>
-            </div>
-    </div>
+<div class="container my-5 section-box">
+<div class="row align-items-start">
+
+<!-- Text links -->
+<div class="col-md-6">
+
+    <h2 class="fw-bold mb-3 border-bottom pb-2">
+        <i class="bi bi-device-hdd"></i> Was ist eine SSD / HDD?
+    </h2>
+
+    <p>
+        SSDs (Solid State Drives) und HDDs (Hard Disk Drives) sind die wichtigsten Speichergeräte eines
+        Computers. Sie speichern dauerhaft Daten wie Programme, Spiele, Dokumente und das Betriebssystem.
+        <br>
+        Eine SSD ist deutlich schneller als eine HDD, da sie keine beweglichen Teile besitzt. Dadurch starten
+        Programme schneller, Spiele laden schneller und das gesamte System fühlt sich flüssiger an.
+    </p>
+
+</div>
+
+<!-- Bild rechts -->
+<div class="col-md-6 p-0">
+    <img src="img.png" class="img-fluid" style="max-width: 85%; margin-top: 30px; margin-left: 20px;" alt="SSD Bild">
+</div>
+
+</div>
+
+<!-- Weitere Abschnitte -->
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Unterschied zwischen SSD und HDD</h3>
+<p>
+    Eine HDD speichert Daten auf rotierenden Magnetscheiben. Sie ist günstiger, aber langsamer und anfälliger
+    für Schäden. Eine SSD speichert Daten auf Flash‑Speicherchips und ist extrem schnell, leise und robust.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert eine SSD?</h3>
+<p>
+    SSDs nutzen NAND‑Flash‑Speicher. Daten werden elektronisch gespeichert und können ohne mechanische Bewegung
+    ausgelesen werden. Dadurch sind SSDs nahezu lautlos und bieten extrem kurze Ladezeiten.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert eine HDD?</h3>
+<p>
+    Eine HDD besitzt rotierende Scheiben und einen Schreib‑/Lesekopf, ähnlich wie ein Plattenspieler. Sie ist
+    langsamer, aber bietet viel Speicherplatz für wenig Geld.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Warum ist eine SSD wichtig?</h3>
+<p>
+    Eine SSD ist eine der effektivsten Upgrades für jeden Computer. Sie sorgt für:
+</p>
+
+<ul>
+    <li>Schnellere Bootzeiten</li>
+    <li>Kürzere Ladezeiten in Spielen</li>
+    <li>Flüssigeres Arbeiten</li>
+    <li>Weniger Geräusche</li>
+    <li>Weniger Wärmeentwicklung</li>
+</ul>
+
+<br><br><br>
+
 </div>
 
 </body>
