formatting the pictures

--- a/Hardware und PC-Komponenten/ram.html
+++ b/Hardware und PC-Komponenten/ram.html
@@ -74,7 +74,7 @@
 
 <!-- Bild rechts -->
 <div class="col-md-6 p-0">
-    <img src="crucial-ddr3-4gb-dimm-image.avif" class="img-fluid" style="margin-top: 40px; margin-left: 20px;" style="transform: scale(0.9);" alt="RAM Bild">
+    <img src="crucial-ddr3-4gb-dimm-image.avif" class="img-fluid" style="margin-top: 50px;  margin-left: 90px" width = "80%;" alt="RAM Bild">
 </div>
 
 </div>
