--- a/Hardware und PC-Komponenten/cpu.html
+++ b/Hardware und PC-Komponenten/cpu.html
@@ -43,7 +43,7 @@
 
 <div class="bg-dark text-white py-5">
     <div class="container">
-        <h1 class="display-4 fw-bold">CPU – Der Prozessor</h1>
+        <h1 class="display-4 fw-bold">CPU - Der Prozessor</h1>
         <p class="lead">Das Gehirn des Computers</p>
     </div>
 </div>
