cooler.html improved

--- a/Hardware und PC-Komponenten/cooler.html
+++ b/Hardware und PC-Komponenten/cooler.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kühler – CPU‑Kühlung</title>
+    <title>Kühler – CPU-Kühlung</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,6 @@
 
 <body class="bg-light">
 
-<!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
         <ul class="nav ms-auto">
@@ -42,47 +41,74 @@
     </div>
 </nav>
 
-<!-- Header -->
 <div class="bg-dark text-white py-5">
     <div class="container">
-        <h1 class="display-4 fw-bold">Kühler – CPU‑Kühlung</h1>
-        <p class="lead">Hält die CPU kühl und sorgt für stabile Leistung</p>
+        <h1 class="display-4 fw-bold">Kühler – CPU-Kühlung</h1>
+        <p class="lead">Hält deinen Prozessor kühl und leistungsfähig</p>
     </div>
 </div>
 
-<!-- Inhalt -->
-<div class="container mt-5">
-    <div class="p-5 bg-white rounded shadow-lg fade-in">
-        <h2>Was macht ein CPU‑Kühler?</h2>
-        <p>
-            Ein CPU‑Kühler sorgt dafür, dass der Prozessor nicht überhitzt.  
-            Bei jeder Berechnung entsteht Wärme – ohne Kühlung würde die CPU
-            sofort zu heiß werden und der PC würde sich abschalten.
-        </p>
+<div class="container my-5 section-box">
+<div class="row align-items-start">
 
-        <h3 class="mt-4">Arten von CPU‑Kühlern</h3>
-        <ul>
-            <li><strong>Luftkühler:</strong> Metallkühler mit Lüfter. Leise, günstig und sehr zuverlässig.</li>
-            <li><strong>Wasserkühlung (AIO):</strong> Nutzt Wasser zur Wärmeabfuhr. Bessere Kühlung, moderner Look.</li>
-            <li><strong>Custom‑Wasserkühlung:</strong> Sehr leistungsstark, aber teuer und aufwendig.</li>
-        </ul>
+<!-- Text -->
+<div class="col-md-6">
 
-        <h3 class="mt-4">Wichtige Eigenschaften eines Kühlers</h3>
-        <ul>
-            <li><strong>Kühlleistung (TDP):</strong> Gibt an, wie viel Wärme der Kühler abführen kann.</li>
-            <li><strong>Lautstärke:</strong> Leise Lüfter sind angenehmer im Alltag.</li>
-            <li><strong>Größe:</strong> Große Kühler passen nicht in jedes Gehäuse.</li>
-            <li><strong>Kompatibilität:</strong> Muss zum CPU‑Sockel passen (z. B. AM4, AM5, LGA1700).</li>
-        </ul>
+    <h2 class="fw-bold mb-3 border-bottom pb-2">
+        <i class="bi bi-fan"></i> Was ist ein CPU-Kühler?
+    </h2>
 
-        <h3 class="mt-4">Wann braucht man eine bessere Kühlung?</h3>
-        <ul>
-            <li>Beim Gaming</li>
-            <li>Beim Video‑Rendering</li>
-            <li>Beim Übertakten</li>
-            <li>Bei leistungsstarken CPUs</li>
-        </ul>
-    </div>
+    <p>
+        Ein CPU-Kühler sorgt dafür, dass der Prozessor nicht überhitzt. Während der Arbeit erzeugt die CPU
+        Wärme, die abgeführt werden muss, damit das System stabil bleibt und volle Leistung bringen kann.
+        Ohne ausreichende Kühlung würde der Prozessor drosseln oder sogar beschädigt werden.
+    </p>
+
+    <p>
+        Es gibt zwei Hauptarten von CPU-Kühlern: Luftkühler und Wasserkühler (AIOs). Beide haben das gleiche
+        Ziel – die Wärme effizient von der CPU wegzuleiten.
+    </p>
+
+</div>
+
+<!-- Bild -->
+<div class="col-md-6 p-0 text-end">
+    <img src="img6.png" class="img-fluid" style="width: 60%; margin-top: -80px;" alt="CPU Kühler Bild">
+</div>
+
+</div>
+
+<!-- Weitere Abschnitte -->
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert ein CPU-Kühler?</h3>
+<p>
+    Ein CPU-Kühler nimmt die Wärme über eine Metallplatte (Heatspreader) auf. Bei Luftkühlern wird die Wärme
+    über Heatpipes zu einem Kühlkörper geleitet, wo ein Lüfter sie wegbläst. Wasserkühler nutzen eine
+    Flüssigkeit, die die Wärme zur Radiatoreinheit transportiert, wo sie abgeführt wird.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Luftkühlung</h3>
+<p>
+    Luftkühler sind zuverlässig, langlebig und benötigen wenig Wartung. Sie bestehen aus einem Kühlkörper
+    und einem oder mehreren Lüftern. Große Tower-Kühler bieten eine sehr gute Kühlleistung und sind oft
+    leiser als erwartet.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wasserkühlung (AIO)</h3>
+<p>
+    All-in-One-Wasserkühlungen bieten eine starke Kühlleistung und ein modernes Design. Sie bestehen aus
+    einer Pumpe, Schläuchen und einem Radiator. Besonders bei leistungsstarken CPUs oder Gaming-PCs sind
+    AIOs sehr beliebt.
+</p>
+
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Warum ist Kühlung wichtig?</h3>
+<p>
+    Eine gute Kühlung sorgt für stabile Leistung, längere Lebensdauer der Komponenten und geringere
+    Lautstärke. Überhitzung kann zu Abstürzen, Leistungsverlust oder dauerhaften Schäden führen.
+</p>
+
+<br><br><br>
+
 </div>
 
 </body>
