Afuaber der Computer-Hardware

--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -56,6 +56,13 @@
       </div>
     </nav>
     <div class="p-5 bg-light rounded shadow-lg fade-in">
+      <h1 class="text-center">Aufbau eines Computers</h1>
+      <p>
+        Der Aufbau eines Computers beschreibt, wie die einzelnen
+        hardware-Komponenten zusammengesetzt sind, wo sie sich befinden und wie
+        sie zusammenarbeiten, damit der Computer funktioniert. Dabei greifen
+        alle Bauteile ineinander und erfüllen jeweils eien bestimmte Aufgabe.
+      </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
