--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -63,6 +63,14 @@
         sie zusammenarbeiten, damit der Computer funktioniert. Dabei greifen
         alle Bauteile ineinander und erfüllen jeweils eien bestimmte Aufgabe.
       </p>
+
+      <h2>Das Gehäuse - der Rahmen des Computers</h2>
+      <p>
+        Alle Hardware-Komponenten befinden sich im PC-Gehäuse. Es schützt die
+        Bauteile vor Staub und Beschädigungen und sorgt zusammen mit Lüftern für
+        eine ausreichende Kühlung. Außerdem hält es alle Teile an ihrem festen
+        Platz und ermöglicht eine geordnete Verkabelung.
+      </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
