trying footer on index.html

--- a/Hardware und PC-Komponenten/cpu.html
+++ b/Hardware und PC-Komponenten/cpu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CPU – Prozessor</title>
+    <title>Gehäuse – PC Case</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,6 +11,7 @@
 
 <body class="bg-light">
 
+<!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
         <ul class="nav ms-auto">
@@ -41,104 +42,79 @@
     </div>
 </nav>
 
+<!-- Header -->
 <div class="bg-dark text-white py-5">
     <div class="container">
-        <h1 class="display-4 fw-bold">CPU - Der Prozessor</h1>
-        <p class="lead">Das Gehirn des Computers</p>
+        <h1 class="display-4 fw-bold">Gehäuse – Das PC Case</h1>
+        <p class="lead">Schutz, Struktur und Airflow für dein System</p>
     </div>
 </div>
 
+<!-- Inhalt -->
 <div class="container my-5 section-box">
 <div class="row align-items-start">
 
-
+<!-- Text -->
 <div class="col-md-6">
 
-    <!-- Was ist eine CPU -->
     <h2 class="fw-bold mb-3 border-bottom pb-2">
-        <i class="bi bi-cpu"></i> Was ist eine CPU?
+        <i class="bi bi-box"></i> Was ist ein PC-Gehäuse?
     </h2>
 
     <p>
-        Wenn Sie jemals Ihren Computer geöffnet und ins Innere geschaut haben, ist Ihnen vielleicht der große
-        „Chip“ auf der Hauptplatine aufgefallen. Dieser Chip ist die Central Processing Unit (CPU), das Gehirn
-        Ihres Computers, das für die Ausführung aller Anweisungen verantwortlich ist, die Ihren Computer zum
-        Laufen bringen.
+        Das PC-Gehäuse ist das äußere Gehäuse eines Computers und beherbergt alle wichtigen Komponenten wie
+        Mainboard, CPU, Grafikkarte, Netzteil und Speichergeräte. Es schützt die Hardware vor Staub,
+        Beschädigungen und sorgt gleichzeitig für eine gute Luftzirkulation.
     </p>
+
     <p>
-        Eine CPU (Central Processing Unit) ist die Hauptkomponente eines jeden Computers oder elektronischen
-        Geräts. Sie ist für die Ausführung der vom Benutzer erteilten Anweisungen verantwortlich. Die CPU
-        fungiert als das „Gehirn“ des Computers – sie liest und interpretiert Befehle von Softwareprogrammen
-        und steuert damit andere Komponenten des Geräts.
+        Moderne Gehäuse bieten verschiedene Größen, Designs und Funktionen – von kompakten Mini-ITX-Gehäusen
+        bis hin zu großen Full-Towern für High-End-Systeme.
     </p>
+
 </div>
 
-<div class="col-md-6 p-0">
-    <img src="img2.png" class="img-fluid" style="transform: scale(1.1);" alt="CPU Bild">
+<!-- Bild -->
+<div class="col-md-6 p-0 text-end">
+    <img src="case.png" class="img-fluid" style="width: 70%; margin-top: 40px;" alt="PC Gehäuse Bild">
 </div>
+
 </div>
 
+<!-- Weitere Abschnitte -->
 
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Warum ist das Gehäuse wichtig?</h3>
+<p>
+    Ein gutes Gehäuse sorgt für optimalen Airflow, wodurch die Komponenten kühl bleiben und länger halten.
+    Außerdem bietet es Platz für Kabelmanagement, Lüfter, Radiatoren und Erweiterungskarten.
+</p>
 
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Arten von PC-Gehäusen</h3>
+<p>
+    Es gibt verschiedene Gehäusegrößen:
+</p>
+<ul>
+    <li><strong>Mini-ITX:</strong> Sehr kompakt, ideal für kleine Systeme.</li>
+    <li><strong>Micro-ATX:</strong> Mittelgroß, gute Balance aus Platz und Größe.</li>
+    <li><strong>ATX Mid-Tower:</strong> Der Standard für Gaming-PCs.</li>
+    <li><strong>Full-Tower:</strong> Sehr groß, ideal für High-End-Builds und Wasserkühlung.</li>
+</ul>
 
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Airflow und Kühlung</h3>
+<p>
+    Ein gutes Gehäuse besitzt ausreichend Lüfterplätze und Mesh-Fronten, damit frische Luft ins Innere gelangt.
+    Ein schlechter Airflow kann zu hohen Temperaturen und Leistungsverlust führen.
+</p>
 
+<h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Design und Features</h3>
+<p>
+    Viele moderne Gehäuse bieten Glas-Seitenteile, RGB-Beleuchtung, modulare Innenräume und einfache
+    Montageoptionen. Auch Staubfilter und Kabelmanagement-Systeme gehören heute zum Standard.
+</p>
 
+<br><br><br>
 
-
-
-    <!-- Rolle der CPU -->
-    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Die Rolle der CPU</h3>
-    <p>
-        Die CPU ist für die Ausführung von Anweisungen und die Verarbeitung von Daten verantwortlich, um die
-        von Programmen oder Anwendungen zugewiesenen Aufgaben zu erfüllen. Dazu muss sie Daten aus dem
-        Speicher abrufen, dekodieren und anschließend ausführen.
-        Dieser Prozess läuft extrem schnell ab – moderne CPUs können Millionen von Befehlen pro Sekunde
-        ausführen. Viele CPUs besitzen mehrere Kerne, sodass sie mehrere Aufgaben gleichzeitig bearbeiten
-        können.
-    </p>
-
-    <!-- Funktionsweise -->
-    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Wie funktioniert die CPU?</h3>
-    <p>
-        Eine CPU arbeitet in zwei Hauptphasen: dem Fetch-Execute-Zyklus und dem Decode-Execute-Zyklus.
-        Im Fetch-Execute-Zyklus holt der Prozessor einen Befehl aus dem Speicher, dekodiert ihn und führt ihn
-        aus. Danach geht er zum nächsten Befehl über.
-        Beim Decode-Execute-Zyklus wird ein Befehl zunächst dekodiert, bevor er ausgeführt wird. Jeder Befehl
-        muss mindestens einmal dekodiert werden, bevor er mehrfach ausgeführt werden kann.
-    </p>
-
-    <!-- CPU Geschwindigkeit -->
-    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">CPU-Geschwindigkeit</h3>
-    <p>
-        Die Geschwindigkeit einer CPU wird in Hertz (Hz) gemessen. Je höher die Taktfrequenz, desto schneller
-        kann die CPU Anweisungen verarbeiten. Moderne Prozessoren arbeiten typischerweise zwischen 1 GHz und
-        5 GHz.
-    </p>
-
-    <!-- CPU Kerne -->
-    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">CPU-Kerne</h3>
-    <p>
-        Neben der Taktfrequenz besitzen CPUs mehrere Kerne. Jeder Kern kann eigene Befehle gleichzeitig
-        ausführen. Dadurch können moderne Prozessoren mehrere Aufgaben parallel bearbeiten.
-        Je nach Einsatzgebiet verfügen CPUs über zwei bis acht Kerne – High-End-Modelle sogar über deutlich
-        mehr.
-    </p>
-
-    <!-- CPU Leistung -->
-    <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Was ist CPU-Leistung?</h3>
-    <p>
-        Die CPU-Leistung beschreibt, wie schnell eine CPU Anweisungen verarbeiten kann. Sie wird in
-        Anweisungen pro Sekunde (IPS) gemessen. Je höher die IPS, desto schneller arbeitet das System.
-        Die Leistung hängt von Taktfrequenz, Architektur und Cache-Größe ab.
-        Eine leistungsstarke CPU sorgt für schnellere Ladezeiten, flüssigeres Multitasking und bessere
-        Performance in Spielen und Anwendungen. Außerdem bleibt das System länger zukunftssicher und kann
-        moderne Software-Updates problemlos verarbeiten.
-    </p>
-
-<br>
-<br>
-<br>
-
+</div>
 
 </body>
 </html>
