--- a/Hardware und PC-Komponenten/ram.html
+++ b/Hardware und PC-Komponenten/ram.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RAM – Arbeitsspeicher</title>
+    <title>RAM - Arbeitsspeicher</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,6 @@
 
 <body class="bg-light">
 
-<!-- Navigation -->
 <nav class="py-3 border-bottom bg-dark">
     <div class="container d-flex flex-wrap align-items-center justify-content-between">
         <ul class="nav ms-auto">
@@ -42,19 +41,16 @@
     </div>
 </nav>
 
-<!-- Header -->
 <div class="bg-dark text-white py-5">
     <div class="container">
-        <h1 class="display-4 fw-bold">RAM – Arbeitsspeicher</h1>
+        <h1 class="display-4 fw-bold">RAM - Arbeitsspeicher</h1>
         <p class="lead">Der schnelle Zwischenspeicher des Computers</p>
     </div>
 </div>
 
-<!-- Inhalt -->
 <div class="container my-5 section-box">
 <div class="row align-items-start">
 
-<!-- Text links -->
 <div class="col-md-6">
 
     <h2 class="fw-bold mb-3 border-bottom pb-2">
@@ -72,14 +68,12 @@
 
 </div>
 
-<!-- Bild rechts -->
 <div class="col-md-6 p-0">
     <img src="crucial-ddr3-4gb-dimm-image.avif" class="img-fluid" style="margin-top: 50px;  margin-left: 90px" width = "80%;" alt="RAM Bild">
 </div>
 
 </div>
 
-<!-- Weitere Abschnitte -->
 
 <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">Die Rolle des RAM</h3>
 <p>
@@ -92,7 +86,7 @@
 <p>
     RAM speichert Daten in kleinen Speicherzellen, die extrem schnell gelesen und beschrieben werden können.
     Diese Zellen benötigen jedoch eine konstante Stromversorgung. Sobald der Computer ausgeschaltet wird,
-    gehen die gespeicherten Informationen verloren – deshalb nennt man RAM „flüchtigen Speicher“.
+    gehen die gespeicherten Informationen verloren - deshalb nennt man RAM „flüchtigen Speicher“.
 </p>
 
 <h3 class="fw-bold mt-5 mb-3 border-bottom pb-2">RAM-Geschwindigkeit</h3>
