Aufbau weiter gemacht

--- a/Hardware und PC-Komponenten/Aufbau.html
+++ b/Hardware und PC-Komponenten/Aufbau.html
@@ -55,23 +55,105 @@
         </ul>
       </div>
     </nav>
+
     <div class="p-5 bg-light rounded shadow-lg fade-in">
-      <h1 class="text-center">Aufbau eines Computers</h1>
+      <h1 class="text-center">Aufbau und Funktionsweise eines Computers</h1>
+      <br />
       <p>
-        Der Aufbau eines Computers beschreibt, wie die einzelnen
-        hardware-Komponenten zusammengesetzt sind, wo sie sich befinden und wie
-        sie zusammenarbeiten, damit der Computer funktioniert. Dabei greifen
-        alle Bauteile ineinander und erfüllen jeweils eien bestimmte Aufgabe.
+        Der Aufbau eines Computers beschreibt sowohl die physische Anordnung der
+        Hardware-Komponenten als auch deren Zusammenarbeit. Jede einzelne
+        Komponente hat eine klar definierte Aufgabe und ist mit anderen Teilen
+        verbunden. Nur durch dieses Zusammenspiel kann ein Computer Programme
+        ausführen, Daten verarbeiten und Informationen ausgeben.
       </p>
 
-      <h2>Das Gehäuse - der Rahmen des Computers</h2>
+      <h2>Das Gehäuse – Basis und Schutz</h2>
       <p>
-        Alle Hardware-Komponenten befinden sich im PC-Gehäuse. Es schützt die
-        Bauteile vor Staub und Beschädigungen und sorgt zusammen mit Lüftern für
-        eine ausreichende Kühlung. Außerdem hält es alle Teile an ihrem festen
-        Platz und ermöglicht eine geordnete Verkabelung.
+        Das Gehäuse bildet die äußere Hülle des Computers. Es dient als stabile
+        Grundlage, in der alle Komponenten befestigt werden. Im Inneren befinden
+        sich Montageplätze für das Mainboard, Laufwerke, das Netzteil sowie
+        Halterungen für Lüfter. Zusätzlich schützt das Gehäuse die empfindliche
+        Hardware vor Staub, Berührung und mechanischen Schäden.
+      </p>
+
+      <h2>Das Mainboard – Verbindung aller Komponenten</h2>
+      <p>
+        Das Mainboard ist die zentrale Platine des Computers und wird fest im
+        Gehäuse verschraubt. Auf ihm befinden sich Steckplätze und Anschlüsse
+        für fast alle weiteren Komponenten. Es stellt Datenleitungen
+        (Bus-Systeme) und Stromverbindungen bereit und sorgt dafür, dass alle
+        Bauteile miteinander kommunizieren können.
+      </p>
+
+      <h2>Der Prozessor (CPU) – Steuerung und Berechnung</h2>
+      <p>
+        Der Prozessor wird in einen speziellen Sockel auf dem Mainboard
+        eingesetzt. Er verarbeitet Befehle des Betriebssystems und von
+        Programmen. Alle Berechnungen, Entscheidungen und Steuerbefehle laufen
+        über die CPU. Sie kommuniziert ständig mit dem Arbeitsspeicher und
+        anderen Komponenten über das Mainboard.
+      </p>
+
+      <h2>Der CPU-Kühler – Temperaturkontrolle</h2>
+      <p>
+        Direkt auf dem Prozessor wird ein Kühler montiert. Dieser besteht aus
+        einem Kühlkörper und meist einem Lüfter. Da die CPU beim Arbeiten viel
+        Wärme erzeugt, leitet der Kühler diese Wärme ab, um Überhitzung und
+        Leistungsverlust zu verhindern.
+      </p>
+
+      <h2>Der Arbeitsspeicher (RAM) – Kurzzeitspeicher</h2>
+      <p>
+        Der Arbeitsspeicher wird in spezielle Steckplätze auf dem Mainboard
+        eingesetzt. Er speichert temporär Daten, die aktuell von der CPU
+        benötigt werden. Je schneller der RAM, desto schneller kann der
+        Prozessor auf diese Daten zugreifen. Ohne RAM wäre ein Arbeiten in
+        Echtzeit nicht möglich.
+      </p>
+
+      <h2>Die Grafikkarte – Bildverarbeitung</h2>
+      <p>
+        Die Grafikkarte wird in einen PCIe-Steckplatz auf dem Mainboard
+        eingesetzt. Sie übernimmt die Berechnung von Grafiken, Bildern und
+        Videos. Die berechneten Bildinformationen werden anschließend an den
+        Monitor ausgegeben. Moderne Grafikkarten besitzen einen eigenen
+        Prozessor und eigenen Speicher.
+      </p>
+
+      <h2>Massenspeicher – SSD und HDD</h2>
+      <p>
+        Der Massenspeicher wird im Gehäuse montiert und über Datenkabel mit dem
+        Mainboard verbunden. Auf ihm befinden sich das Betriebssystem, Programme
+        und persönliche Dateien. Während des Betriebs lädt die CPU benötigte
+        Daten vom Massenspeicher in den Arbeitsspeicher.
+      </p>
+
+      <h2>Das Netzteil – Energieversorgung</h2>
+      <p>
+        Das Netzteil ist meist im unteren oder oberen Bereich des Gehäuses
+        montiert. Es wandelt den Strom aus der Steckdose in nutzbare Spannungen
+        um und versorgt Mainboard, CPU, Grafikkarte, Laufwerke und Lüfter über
+        Kabel mit Energie.
+      </p>
+
+      <h2>Lüfter und Luftstrom</h2>
+      <p>
+        Mehrere Gehäuselüfter sorgen für einen kontrollierten Luftstrom. Kühle
+        Luft wird angesaugt, warme Luft abgeführt. Dadurch bleiben alle
+        Komponenten innerhalb sicherer Temperaturbereiche, was Stabilität und
+        Lebensdauer erhöht.
+      </p>
+
+      <h2>Zusammenarbeit aller Komponenten</h2>
+      <p>
+        Beim Start des Computers liefert das Netzteil Strom an das Mainboard.
+        Dieses aktiviert die CPU, welche das Betriebssystem vom Massenspeicher
+        in den Arbeitsspeicher lädt. Programme werden verarbeitet, Daten im RAM
+        zwischengespeichert und Ergebnisse über die Grafikkarte ausgegeben.
+        Jeder Schritt ist Teil eines abgestimmten Systems.
       </p>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
